-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.5 2007-05-19 00:37:04 pwessel Exp $
-----------------------------------------------------------------------------------------

2007-05-18	pwessel
      * pslib.c:		ps_text can now use @_, @: and @; sequences
      * pslib.txt:		Updated the documentation
      * gmt_support.c		Added function GMT_enforce_rgb_triplets to scan for @;color;
      				and replace it with r/g/b if given by name, gray, h-s-v etc.
      * gmt_init.c		Applies GMT_enforce_rgb_triplets to header and axes labels
      * pstext.c		Revised help message accordingly.  Applies GMT_enforce_rgb_triplets
      * pstext.txt		Updated accordingly
      * GMT_Chapter_4.tex	Updated table of escape sequences
      * GMT_Tutorial.tex	Same
      
2007-05-17:	remko
      * ChangeLog:		Replaced CHANGES by ChangeLog (GNU requirement)

2007-05-15
      * gmt_io.c:		Modification to format fix of 03/07/2006:  When no delimiters are used
				for input date format (e.g., yyyymmdd) then yyyy MUST BE 4 characters
				and we must use %4d.  Leading zeros are required if year < 1000.

2007-05-14
      * ex11/*:			Changed the 3-D color cube script. Added HSB info. Removed rgb_cube.awk
      * GMT_Chapter_7.tex:	Changed accordingly.

2007-05-08
      * coast/binned_borders*.b:	Added Australia state boundaries, fixed Yemen and Lebanon

2007-05-06
      * project.c:		Wrong azimuth for -N -G generating lines

2007-05-04
      * xyz2grd.c:		-E did not process pixel grids properly

2007-04-30
      * gmt_agc_io.c:		Failed when nx and/or ny was multiple of 40 + 1.
      * grdreformat.c:		Cannot determine format of output file automatically since file
				does not yet exist (must append file-type code)

2007-04-27
      * imgsrc/img2mercgrd.c:	Used wrong origin when -C was used.  Now relative to lon=lat=0.
      * grdfilter.c:		Added -D5 to allow filtering of Mercator grids (img)

2007-04-25